fixed first click on popup not showing popup

--- a/styles.css
+++ b/styles.css
@@ -776,3 +776,7 @@
         margin: 0 auto;
         padding: 10px;
     }
+    
+    #cronoLink {
+        z-index: 1005;
+    }
